clinical features
